tests/snapshots/snapshots__workbar-narrow.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
──────────────────────────────────────
  Tasks    Fleet    Jobs    Files   ×
 Goal: Extract the native dock
 TODO · 3/12 · 9 left
  4 · ● Plan step 4                  │
  5 · ○ Plan step 5                  ┃
  6 · ○ Plan step 6                  │
                            ↓ 6 more │
---
r0 c0..38 fg=Border bg=Sidebar
r1 c0..1 fg=Foreground bg=Sidebar
r1 c1..8 fg=Foreground bg=Selected bold
r1 c8..10 fg=Foreground bg=Sidebar
r1 c10..17 fg=Muted bg=Sidebar
r1 c17..19 fg=Foreground bg=Sidebar
r1 c19..25 fg=Muted bg=Sidebar
r1 c25..27 fg=Foreground bg=Sidebar
r1 c27..34 fg=Muted bg=Sidebar
r1 c34..35 fg=Foreground bg=Sidebar
r1 c35..38 fg=Hint|Dim bg=Sidebar
r2 c0..1 fg=Foreground bg=Sidebar
r2 c1..30 fg=Live bg=Sidebar bold
r2 c30..38 fg=Foreground bg=Sidebar
r3 c0..1 fg=Foreground bg=Sidebar
r3 c1..21 fg=Muted bg=Sidebar
r3 c21..38 fg=Foreground bg=Sidebar
r4 c0..1 fg=Foreground bg=Sidebar
r4 c1..36 fg=Live bg=Selected bold
r4 c36..37 fg=Foreground bg=Sidebar
r4 c37..38 fg=Border bg=Sidebar
r5 c0..1 fg=Foreground bg=Sidebar
r5 c1..36 fg=Muted bg=Sidebar
r5 c36..37 fg=Foreground bg=Sidebar
r5 c37..38 fg=Live bg=Sidebar
r6 c0..1 fg=Foreground bg=Sidebar
r6 c1..36 fg=Muted bg=Sidebar
r6 c36..37 fg=Foreground bg=Sidebar
r6 c37..38 fg=Border bg=Sidebar
r7 c0..1 fg=Foreground bg=Sidebar
r7 c1..36 fg=Muted bg=Sidebar
r7 c36..37 fg=Foreground bg=Sidebar
r7 c37..38 fg=Border bg=Sidebar

== dark-graphite
──────────────────────────────────────
  Tasks    Fleet    Jobs    Files   ×
 Goal: Extract the native dock
 TODO · 3/12 · 9 left
  4 · ● Plan step 4                  │
  5 · ○ Plan step 5                  ┃
  6 · ○ Plan step 6                  │
                            ↓ 6 more │
---
r0 c0..38 fg=Border bg=Sidebar
r1 c0..1 fg=Foreground bg=Sidebar
r1 c1..8 fg=Foreground bg=Selected bold
r1 c8..10 fg=Foreground bg=Sidebar
r1 c10..17 fg=Muted bg=Sidebar
r1 c17..19 fg=Foreground bg=Sidebar
r1 c19..25 fg=Muted bg=Sidebar
r1 c25..27 fg=Foreground bg=Sidebar
r1 c27..34 fg=Muted bg=Sidebar
r1 c34..35 fg=Foreground bg=Sidebar
r1 c35..38 fg=Hint|Dim bg=Sidebar
r2 c0..1 fg=Foreground bg=Sidebar
r2 c1..30 fg=Live bg=Sidebar bold
r2 c30..38 fg=Foreground bg=Sidebar
r3 c0..1 fg=Foreground bg=Sidebar
r3 c1..21 fg=Muted bg=Sidebar
r3 c21..38 fg=Foreground bg=Sidebar
r4 c0..1 fg=Foreground bg=Sidebar
r4 c1..36 fg=Live bg=Selected bold
r4 c36..37 fg=Foreground bg=Sidebar
r4 c37..38 fg=Border bg=Sidebar
r5 c0..1 fg=Foreground bg=Sidebar
r5 c1..36 fg=Muted bg=Sidebar
r5 c36..37 fg=Foreground bg=Sidebar
r5 c37..38 fg=Live bg=Sidebar
r6 c0..1 fg=Foreground bg=Sidebar
r6 c1..36 fg=Muted bg=Sidebar
r6 c36..37 fg=Foreground bg=Sidebar
r6 c37..38 fg=Border bg=Sidebar
r7 c0..1 fg=Foreground bg=Sidebar
r7 c1..36 fg=Muted bg=Sidebar
r7 c36..37 fg=Foreground bg=Sidebar
r7 c37..38 fg=Border bg=Sidebar

== light-truecolor
──────────────────────────────────────
  Tasks    Fleet    Jobs    Files   ×
 Goal: Extract the native dock
 TODO · 3/12 · 9 left
  4 · ● Plan step 4                  │
  5 · ○ Plan step 5                  ┃
  6 · ○ Plan step 6                  │
                            ↓ 6 more │
---
r0 c0..38 fg=Border
r1 c0..1 fg=Foreground
r1 c1..8 fg=Foreground bg=Selected bold
r1 c8..10 fg=Foreground
r1 c10..17 fg=Muted
r1 c17..19 fg=Foreground
r1 c19..25 fg=Muted
r1 c25..27 fg=Foreground
r1 c27..34 fg=Muted
r1 c34..35 fg=Foreground
r1 c35..38 fg=Hint|Dim
r2 c0..1 fg=Foreground
r2 c1..30 fg=Live bold
r2 c30..38 fg=Foreground
r3 c0..1 fg=Foreground
r3 c1..21 fg=Muted
r3 c21..38 fg=Foreground
r4 c0..1 fg=Foreground
r4 c1..36 fg=Live bg=Selected bold
r4 c36..37 fg=Foreground
r4 c37..38 fg=Border
r5 c0..1 fg=Foreground
r5 c1..36 fg=Muted
r5 c36..37 fg=Foreground
r5 c37..38 fg=Live
r6 c0..1 fg=Foreground
r6 c1..36 fg=Muted
r6 c36..37 fg=Foreground
r6 c37..38 fg=Border
r7 c0..1 fg=Foreground
r7 c1..36 fg=Muted
r7 c36..37 fg=Foreground
r7 c37..38 fg=Border

== dark-256
──────────────────────────────────────
  Tasks    Fleet    Jobs    Files   ×
 Goal: Extract the native dock
 TODO · 3/12 · 9 left
  4 · ● Plan step 4                  │
  5 · ○ Plan step 5                  ┃
  6 · ○ Plan step 6                  │
                            ↓ 6 more │
---
r0 c0..38 fg=Border bg=Sidebar
r1 c0..1 fg=Foreground bg=Sidebar
r1 c1..8 fg=Foreground bg=Selected bold
r1 c8..10 fg=Foreground bg=Sidebar
r1 c10..17 fg=Muted bg=Sidebar
r1 c17..19 fg=Foreground bg=Sidebar
r1 c19..25 fg=Muted bg=Sidebar
r1 c25..27 fg=Foreground bg=Sidebar
r1 c27..34 fg=Muted bg=Sidebar
r1 c34..35 fg=Foreground bg=Sidebar
r1 c35..38 fg=Hint|Dim bg=Sidebar
r2 c0..1 fg=Foreground bg=Sidebar
r2 c1..30 fg=Live bg=Sidebar bold
r2 c30..38 fg=Foreground bg=Sidebar
r3 c0..1 fg=Foreground bg=Sidebar
r3 c1..21 fg=Muted bg=Sidebar
r3 c21..38 fg=Foreground bg=Sidebar
r4 c0..1 fg=Foreground bg=Sidebar
r4 c1..36 fg=Live bg=Selected bold
r4 c36..37 fg=Foreground bg=Sidebar
r4 c37..38 fg=Border bg=Sidebar
r5 c0..1 fg=Foreground bg=Sidebar
r5 c1..36 fg=Muted bg=Sidebar
r5 c36..37 fg=Foreground bg=Sidebar
r5 c37..38 fg=Live bg=Sidebar
r6 c0..1 fg=Foreground bg=Sidebar
r6 c1..36 fg=Muted bg=Sidebar
r6 c36..37 fg=Foreground bg=Sidebar
r6 c37..38 fg=Border bg=Sidebar
r7 c0..1 fg=Foreground bg=Sidebar
r7 c1..36 fg=Muted bg=Sidebar
r7 c36..37 fg=Foreground bg=Sidebar
r7 c37..38 fg=Border bg=Sidebar

== light-256
──────────────────────────────────────
  Tasks    Fleet    Jobs    Files   ×
 Goal: Extract the native dock
 TODO · 3/12 · 9 left
  4 · ● Plan step 4                  │
  5 · ○ Plan step 5                  ┃
  6 · ○ Plan step 6                  │
                            ↓ 6 more │
---
r0 c0..38 fg=Border
r1 c0..1 fg=Foreground
r1 c1..8 fg=Foreground bg=Hover|Selected|DiffAddedTint|DiffRemovedTint bold
r1 c8..10 fg=Foreground
r1 c10..17 fg=Muted|Hint|Dim
r1 c17..19 fg=Foreground
r1 c19..25 fg=Muted|Hint|Dim
r1 c25..27 fg=Foreground
r1 c27..34 fg=Muted|Hint|Dim
r1 c34..35 fg=Foreground
r1 c35..38 fg=Muted|Hint|Dim
r2 c0..1 fg=Foreground
r2 c1..30 fg=Live bold
r2 c30..38 fg=Foreground
r3 c0..1 fg=Foreground
r3 c1..21 fg=Muted|Hint|Dim
r3 c21..38 fg=Foreground
r4 c0..1 fg=Foreground
r4 c1..36 fg=Live bg=Hover|Selected|DiffAddedTint|DiffRemovedTint bold
r4 c36..37 fg=Foreground
r4 c37..38 fg=Border
r5 c0..1 fg=Foreground
r5 c1..36 fg=Muted|Hint|Dim
r5 c36..37 fg=Foreground
r5 c37..38 fg=Live
r6 c0..1 fg=Foreground
r6 c1..36 fg=Muted|Hint|Dim
r6 c36..37 fg=Foreground
r6 c37..38 fg=Border
r7 c0..1 fg=Foreground
r7 c1..36 fg=Muted|Hint|Dim
r7 c36..37 fg=Foreground
r7 c37..38 fg=Border

== ansi-16
──────────────────────────────────────
  Tasks    Fleet    Jobs    Files   ×
 Goal: Extract the native dock
 TODO · 3/12 · 9 left
  4 · ● Plan step 4                  │
  5 · ○ Plan step 5                  ┃
  6 · ○ Plan step 6                  │
                            ↓ 6 more │
---
r0 c0..38 dim
r1 c1..8 bold
r1 c10..17 dim
r1 c19..25 dim
r1 c27..34 dim
r1 c35..38 dim
r2 c1..30 fg=Live bold
r3 c1..21 dim
r4 c1..36 fg=Live bold
r4 c37..38 dim
r5 c1..36 dim
r5 c37..38 fg=Live
r6 c1..36 dim
r6 c37..38 dim
r7 c1..36 dim
r7 c37..38 dim

== unknown-ground
──────────────────────────────────────
  Tasks    Fleet    Jobs    Files   ×
 Goal: Extract the native dock
 TODO · 3/12 · 9 left
  4 · ● Plan step 4                  │
  5 · ○ Plan step 5                  ┃
  6 · ○ Plan step 6                  │
                            ↓ 6 more │
---
r0 c0..38 dim
r1 c1..8 bold
r1 c10..17 dim
r1 c19..25 dim
r1 c27..34 dim
r1 c35..38 dim
r2 c1..30 fg=Live bold
r3 c1..21 dim
r4 c1..36 fg=Live bold
r4 c37..38 dim
r5 c1..36 dim
r5 c37..38 fg=Live
r6 c1..36 dim
r6 c37..38 dim
r7 c1..36 dim
r7 c37..38 dim

== no-color
──────────────────────────────────────
  Tasks    Fleet    Jobs    Files   ×
 Goal: Extract the native dock
 TODO · 3/12 · 9 left
  4 · ● Plan step 4                  │
  5 · ○ Plan step 5                  ┃
  6 · ○ Plan step 6                  │
                            ↓ 6 more │
---
r0 c0..38 dim
r1 c1..8 bold
r1 c10..17 dim
r1 c19..25 dim
r1 c27..34 dim
r1 c35..38 dim
r2 c1..30 bold
r3 c1..21 dim
r4 c1..36 bold
r4 c37..38 dim
r5 c1..36 dim
r6 c1..36 dim
r6 c37..38 dim
r7 c1..36 dim
r7 c37..38 dim

== ascii
--------------------------------------
  Tasks    Fleet    Jobs    Files   X
 Goal: Extract the native dock
 TODO . 3/12 . 9 left
  4 . . Plan step 4                  |
  5 . o Plan step 5                  |
  6 . o Plan step 6                  |
                            v 6 more |
---
r0 c0..38 dim
r1 c1..8 bold
r1 c10..17 dim
r1 c19..25 dim
r1 c27..34 dim
r1 c35..38 dim
r2 c1..30 bold
r3 c1..21 dim
r4 c1..36 bold
r4 c37..38 dim
r5 c1..36 dim
r6 c1..36 dim
r6 c37..38 dim
r7 c1..36 dim
r7 c37..38 dim
