tests/snapshots/snapshots__workbar-notes.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
────────────────────────────────────────────────────────────────────────────────────────────────────────
  Tasks 3    Fleet 2    Jobs 1    Files 3    Notes 2    Context    Git    Cost                    Esc ×
 ▪ Keep the native dock tab order                                                          /note show 1
 ▪ Make each row independently selectable                                                  /note show 2

---
r0 c0..104 fg=Border bg=Sidebar
r1 c0..1 fg=Foreground bg=Sidebar
r1 c1..10 fg=Muted bg=Sidebar
r1 c10..12 fg=Foreground bg=Sidebar
r1 c12..21 fg=Muted bg=Sidebar
r1 c21..23 fg=Foreground bg=Sidebar
r1 c23..31 fg=Muted bg=Sidebar
r1 c31..33 fg=Foreground bg=Sidebar
r1 c33..42 fg=Muted bg=Sidebar
r1 c42..44 fg=Foreground bg=Sidebar
r1 c44..53 fg=Foreground bg=Selected bold
r1 c53..55 fg=Foreground bg=Sidebar
r1 c55..64 fg=Muted bg=Sidebar
r1 c64..66 fg=Foreground bg=Sidebar
r1 c66..71 fg=Muted bg=Sidebar
r1 c71..73 fg=Foreground bg=Sidebar
r1 c73..79 fg=Muted bg=Sidebar
r1 c79..97 fg=Foreground bg=Sidebar
r1 c97..104 fg=Hint|Dim bg=Sidebar
r2 c0..1 fg=Foreground bg=Sidebar
r2 c1..103 fg=Live bg=Selected bold
r2 c103..104 fg=Foreground bg=Sidebar
r3 c0..1 fg=Foreground bg=Sidebar
r3 c1..103 fg=Live bg=Sidebar
r3 c103..104 fg=Foreground bg=Sidebar
r4 c0..104 fg=Foreground bg=Sidebar

== dark-graphite
────────────────────────────────────────────────────────────────────────────────────────────────────────
  Tasks 3    Fleet 2    Jobs 1    Files 3    Notes 2    Context    Git    Cost                    Esc ×
 ▪ Keep the native dock tab order                                                          /note show 1
 ▪ Make each row independently selectable                                                  /note show 2

---
r0 c0..104 fg=Border bg=Sidebar
r1 c0..1 fg=Foreground bg=Sidebar
r1 c1..10 fg=Muted bg=Sidebar
r1 c10..12 fg=Foreground bg=Sidebar
r1 c12..21 fg=Muted bg=Sidebar
r1 c21..23 fg=Foreground bg=Sidebar
r1 c23..31 fg=Muted bg=Sidebar
r1 c31..33 fg=Foreground bg=Sidebar
r1 c33..42 fg=Muted bg=Sidebar
r1 c42..44 fg=Foreground bg=Sidebar
r1 c44..53 fg=Foreground bg=Selected bold
r1 c53..55 fg=Foreground bg=Sidebar
r1 c55..64 fg=Muted bg=Sidebar
r1 c64..66 fg=Foreground bg=Sidebar
r1 c66..71 fg=Muted bg=Sidebar
r1 c71..73 fg=Foreground bg=Sidebar
r1 c73..79 fg=Muted bg=Sidebar
r1 c79..97 fg=Foreground bg=Sidebar
r1 c97..104 fg=Hint|Dim bg=Sidebar
r2 c0..1 fg=Foreground bg=Sidebar
r2 c1..103 fg=Live bg=Selected bold
r2 c103..104 fg=Foreground bg=Sidebar
r3 c0..1 fg=Foreground bg=Sidebar
r3 c1..103 fg=Live bg=Sidebar
r3 c103..104 fg=Foreground bg=Sidebar
r4 c0..104 fg=Foreground bg=Sidebar

== light-truecolor
────────────────────────────────────────────────────────────────────────────────────────────────────────
  Tasks 3    Fleet 2    Jobs 1    Files 3    Notes 2    Context    Git    Cost                    Esc ×
 ▪ Keep the native dock tab order                                                          /note show 1
 ▪ Make each row independently selectable                                                  /note show 2

---
r0 c0..104 fg=Border
r1 c0..1 fg=Foreground
r1 c1..10 fg=Muted
r1 c10..12 fg=Foreground
r1 c12..21 fg=Muted
r1 c21..23 fg=Foreground
r1 c23..31 fg=Muted
r1 c31..33 fg=Foreground
r1 c33..42 fg=Muted
r1 c42..44 fg=Foreground
r1 c44..53 fg=Foreground bg=Selected bold
r1 c53..55 fg=Foreground
r1 c55..64 fg=Muted
r1 c64..66 fg=Foreground
r1 c66..71 fg=Muted
r1 c71..73 fg=Foreground
r1 c73..79 fg=Muted
r1 c79..97 fg=Foreground
r1 c97..104 fg=Hint|Dim
r2 c0..1 fg=Foreground
r2 c1..103 fg=Live bg=Selected bold
r2 c103..104 fg=Foreground
r3 c0..1 fg=Foreground
r3 c1..103 fg=Live
r3 c103..104 fg=Foreground
r4 c0..104 fg=Foreground

== dark-256
────────────────────────────────────────────────────────────────────────────────────────────────────────
  Tasks 3    Fleet 2    Jobs 1    Files 3    Notes 2    Context    Git    Cost                    Esc ×
 ▪ Keep the native dock tab order                                                          /note show 1
 ▪ Make each row independently selectable                                                  /note show 2

---
r0 c0..104 fg=Border bg=Sidebar
r1 c0..1 fg=Foreground bg=Sidebar
r1 c1..10 fg=Muted bg=Sidebar
r1 c10..12 fg=Foreground bg=Sidebar
r1 c12..21 fg=Muted bg=Sidebar
r1 c21..23 fg=Foreground bg=Sidebar
r1 c23..31 fg=Muted bg=Sidebar
r1 c31..33 fg=Foreground bg=Sidebar
r1 c33..42 fg=Muted bg=Sidebar
r1 c42..44 fg=Foreground bg=Sidebar
r1 c44..53 fg=Foreground bg=Selected bold
r1 c53..55 fg=Foreground bg=Sidebar
r1 c55..64 fg=Muted bg=Sidebar
r1 c64..66 fg=Foreground bg=Sidebar
r1 c66..71 fg=Muted bg=Sidebar
r1 c71..73 fg=Foreground bg=Sidebar
r1 c73..79 fg=Muted bg=Sidebar
r1 c79..97 fg=Foreground bg=Sidebar
r1 c97..104 fg=Hint|Dim bg=Sidebar
r2 c0..1 fg=Foreground bg=Sidebar
r2 c1..103 fg=Live bg=Selected bold
r2 c103..104 fg=Foreground bg=Sidebar
r3 c0..1 fg=Foreground bg=Sidebar
r3 c1..103 fg=Live bg=Sidebar
r3 c103..104 fg=Foreground bg=Sidebar
r4 c0..104 fg=Foreground bg=Sidebar

== light-256
────────────────────────────────────────────────────────────────────────────────────────────────────────
  Tasks 3    Fleet 2    Jobs 1    Files 3    Notes 2    Context    Git    Cost                    Esc ×
 ▪ Keep the native dock tab order                                                          /note show 1
 ▪ Make each row independently selectable                                                  /note show 2

---
r0 c0..104 fg=Border
r1 c0..1 fg=Foreground
r1 c1..10 fg=Muted|Hint|Dim
r1 c10..12 fg=Foreground
r1 c12..21 fg=Muted|Hint|Dim
r1 c21..23 fg=Foreground
r1 c23..31 fg=Muted|Hint|Dim
r1 c31..33 fg=Foreground
r1 c33..42 fg=Muted|Hint|Dim
r1 c42..44 fg=Foreground
r1 c44..53 fg=Foreground bg=Hover|Selected|DiffAddedTint|DiffRemovedTint bold
r1 c53..55 fg=Foreground
r1 c55..64 fg=Muted|Hint|Dim
r1 c64..66 fg=Foreground
r1 c66..71 fg=Muted|Hint|Dim
r1 c71..73 fg=Foreground
r1 c73..79 fg=Muted|Hint|Dim
r1 c79..97 fg=Foreground
r1 c97..104 fg=Muted|Hint|Dim
r2 c0..1 fg=Foreground
r2 c1..103 fg=Live bg=Hover|Selected|DiffAddedTint|DiffRemovedTint bold
r2 c103..104 fg=Foreground
r3 c0..1 fg=Foreground
r3 c1..103 fg=Live
r3 c103..104 fg=Foreground
r4 c0..104 fg=Foreground

== ansi-16
────────────────────────────────────────────────────────────────────────────────────────────────────────
  Tasks 3    Fleet 2    Jobs 1    Files 3    Notes 2    Context    Git    Cost                    Esc ×
 ▪ Keep the native dock tab order                                                          /note show 1
 ▪ Make each row independently selectable                                                  /note show 2

---
r0 c0..104 dim
r1 c1..10 dim
r1 c12..21 dim
r1 c23..31 dim
r1 c33..42 dim
r1 c44..53 bold
r1 c55..64 dim
r1 c66..71 dim
r1 c73..79 dim
r1 c97..104 dim
r2 c1..103 fg=Live bold
r3 c1..103 fg=Live

== unknown-ground
────────────────────────────────────────────────────────────────────────────────────────────────────────
  Tasks 3    Fleet 2    Jobs 1    Files 3    Notes 2    Context    Git    Cost                    Esc ×
 ▪ Keep the native dock tab order                                                          /note show 1
 ▪ Make each row independently selectable                                                  /note show 2

---
r0 c0..104 dim
r1 c1..10 dim
r1 c12..21 dim
r1 c23..31 dim
r1 c33..42 dim
r1 c44..53 bold
r1 c55..64 dim
r1 c66..71 dim
r1 c73..79 dim
r1 c97..104 dim
r2 c1..103 fg=Live bold
r3 c1..103 fg=Live

== no-color
────────────────────────────────────────────────────────────────────────────────────────────────────────
  Tasks 3    Fleet 2    Jobs 1    Files 3    Notes 2    Context    Git    Cost                    Esc ×
 ▪ Keep the native dock tab order                                                          /note show 1
 ▪ Make each row independently selectable                                                  /note show 2

---
r0 c0..104 dim
r1 c1..10 dim
r1 c12..21 dim
r1 c23..31 dim
r1 c33..42 dim
r1 c44..53 bold
r1 c55..64 dim
r1 c66..71 dim
r1 c73..79 dim
r1 c97..104 dim
r2 c1..103 bold

== ascii
--------------------------------------------------------------------------------------------------------
  Tasks 3    Fleet 2    Jobs 1    Files 3    Notes 2    Context    Git    Cost                    Esc X
 # Keep the native dock tab order                                                          /note show 1
 # Make each row independently selectable                                                  /note show 2

---
r0 c0..104 dim
r1 c1..10 dim
r1 c12..21 dim
r1 c23..31 dim
r1 c33..42 dim
r1 c44..53 bold
r1 c55..64 dim
r1 c66..71 dim
r1 c73..79 dim
r1 c97..104 dim
r2 c1..103 bold
